Add night sky background image

--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
   </head>
   <body>
     <div class="container">
-      <div class="inputbox">
-        <form>
-          <input type="number" id="amount" value="100" step="50" min="0" />
-          <select id="currencies"></select>
-        </form>
+      <img
+        id="background"
+        src="https://eu.community.samsung.com/t5/image/serverpage/image-id/808981i06C888B32B1660B1/image-size/large?v=v2&px=999"
+      />
+      <div id="content">
+        <div class="inputbox">
+          <form>
+            <input type="number" id="amount" value="100" step="50" min="0" />
+            <select id="currencies"></select>
+          </form>
+        </div>
+        <div id="outputbox"></div>
       </div>
-      <div id="outputbox"></div>
     </div>
     <script src="script.js" />
   </body>
