Fixing <script> tag issue
Fixing unclosed tag

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
         <div id="outputbox"></div>
       </div>
     </div>
-    <script src="script.js" />
+    <script src="script.js"></script>
   </body>
 </html>
