--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="container">
       <img
         id="background"
-        src="https://eu.community.samsung.com/t5/image/serverpage/image-id/808981i06C888B32B1660B1/image-size/large?v=v2&px=999"
+        src="https://m.foolcdn.com/media/dubs/original_images/Intro_slide_-_digital_stock_chart_going_up_-_source_getty.jpg"
       />
       <div id="content">
         <div class="inputbox">
